--- a/arch/arm64/configs/s10_devkit_defconfig
+++ b/arch/arm64/configs/s10_devkit_defconfig
@@ -1446,7 +1446,7 @@ CONFIG_ALTERA_ILC=m
 #
 # EEPROM support
 #
-CONFIG_EEPROM_AT24=y
+CONFIG_EEPROM_AT24=m
 CONFIG_EEPROM_AT25=m
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
